# rust-imap

./: .gitignore  Cargo.toml  README.md  example.rs
src/: imap.rs
